# exo

./: create_exo_project.sh
Exo/: .gitignore  Cargo.toml
Exo/crates/app_shell/: Cargo.toml
Exo/crates/app_shell/src/: main.rs
Exo/crates/browser_core/: Cargo.toml
Exo/crates/browser_core/src/: lib.rs
Exo/crates/dev_tools/: Cargo.toml
Exo/crates/js_engine/: Cargo.toml
Exo/crates/networking/: Cargo.toml
Exo/crates/networking/src/: lib.rs
Exo/crates/privacy_features/: Cargo.toml
Exo/crates/process_manager/: Cargo.toml
Exo/crates/rendering_engine/: Cargo.toml
Exo/crates/rendering_engine/src/: lib.rs
Exo/crates/security_context/: Cargo.toml
Exo/crates/shared_types/: Cargo.toml
Exo/crates/shared_types/src/: lib.rs
Exo/crates/storage/: Cargo.toml
Exo/crates/ui_toolkit/: Cargo.toml
