[workspace]
resolver = "2"
members = [
    "crates/app_shell",
    "crates/browser_core",
    "crates/rendering_engine",
    "crates/js_engine",
    "crates/networking",
    "crates/storage",
    "crates/privacy_features",
    "crates/security_context",
    "crates/process_manager",
    "crates/dev_tools",
    "crates/shared_types",
    "crates/ui_toolkit",
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
], default-features = false }
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
iced = { version = "0.12", features = ["tokio", "debug", "advanced"] }
