[package]
name = "browser_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
url = { workspace = true }
networking = { path = "../networking" }
rendering_engine = { path = "../rendering_engine" }
shared_types = { path = "../shared_types" }
log = { workspace = true }
thiserror = { workspace = true }
